# pbackup

./: .gitignore  README.md  build.sh  install.sh  pyproject.toml  setup.py  uninstall.sh
doc/html/: ____init_____8py.html  ____init_____8py_source.html  annotated.html  backup_8py.html  backup_8py_source.html  classes.html  classpbackup_1_1backup_1_1Backup-members.html  classpbackup_1_1backup_1_1Backup.html  classpbackup_1_1backup_1_1BackupError.html  classpbackup_1_1backup_1_1BackupError__inherit__graph.dot  classpbackup_1_1backup_1_1Backup__coll__graph.dot  classpbackup_1_1backup_1_1DiskUsage-members.html  classpbackup_1_1backup_1_1DiskUsage.html  classpbackup_1_1backup_1_1DiskUsage__coll__graph.dot  classpbackup_1_1backup_1_1DiskUsage__inherit__graph.dot  classpbackup_1_1backup_1_1UO-members.html  classpbackup_1_1backup_1_1UO.html  classpbackup_1_1backup_1_1UO__inherit__graph.dot  dir_9cb12bca83332f873cab06344518ea77.html  files.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.dot  inherit_graph_1.dot  inherits.html  menudata.js  namespacemembers.html  namespacemembers_func.html  namespacepbackup.html  namespacepbackup_1_1backup.html  namespaces.html
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  files_0.js  files_1.js  functions_0.js  (+19 more)
pbackup/: backup.py
scripts/: pbackup
test/: README.txt  pbackup_purge_test.py
